# noted

./: .gitignore  Cargo.toml  LICENSE  README.md  install.sh  main.c  uninstall.sh
.github/workflows/: ci.yml
scripts/: init_db_dir.sh
src/: Makefile  args.rs  db.rs  entries.c  entries.h  filehandler.c  filehandler.h  helpers.rs  lib.rs  main.c  main.rs  note.rs  prints.c  prints.h
src/models/: note.rs
tests/: db_tests.rs
tests/resources/: large_noteset_data.txt  noteset_to_edit.txt
