[package]
name = "noted"
version = "0.1.0"
edition = "2021"

[dependencies]
uuid = { version = "1.10.0", features = [
  "v4",
  "fast-rng",
  "macro-diagnostics",
] }
rusqlite = "0.32.1"
chrono = "0.4.38"
ansi_term = "0.12.1"
clap = { version = "4.5.19", features = ["derive"] }
thiserror = "1.0.64"
